test/parse/module/bad-module-no-close.txt
;;; ERROR: 1
(module
(;; STDERR ;;;
parse/module/bad-module-no-close.txt:3:8: syntax error, unexpected EOF, expecting ( or )
;;; STDERR ;;)
